# quickjspp

./: CMakeLists.txt  qjs.cpp  quickjspp.hpp  readme.md
quickjs/: quickjs.c
quickjs/windows/include/quickjs/: quickjs.h
quickjs/windows/lib/: qjs.lib
quickjs/windows/lib/cmake/quickjs/: qjsConfig-minsizerel.cmake  qjsConfig.cmake
